# lenny-cli

./: .env.example  .gitignore  .gitmodules  Makefile  README.md  conftest.py  pyproject.toml
Formula/: lenny-cli.rb
examples/: rlm-vs-rag-vs-lennybot.md
src/lenny/: __main__.py  cache.py  cli.py  costs.py  data.py  engine.py  mcp_client.py  persist.py  progress.py  rag.py  router.py  search.py  style.py  transcripts.py
tests/: test_persist.py  test_progress.py  test_router.py  test_sandbox.py  test_search.py  test_style.py  test_transcripts.py
